docs/airnode/v0.2/reference/packages/README.md
---
title: Overview
docSetName: Airnode v0.2
folder: Reference > Packages
basePath: /airnode/v0.2
tags:
---

<TitleSpan>{{$frontmatter.folder}}</TitleSpan>

# {{$frontmatter.title}}

<VersionWarning/>
Airnode is a fully-serverless oracle node that is designed specifically for API
providers to operate their own oracles. Its code base is a monorepo managed
using [Lerna](https://github.com/lerna/lerna).

The [Airnode monorepo](https://github.com/api3dao/airnode/tree/v0.2/packages)
has several packages:

[**adapter**:](https://github.com/api3dao/airnode/tree/v0.2/packages/airnode-adapter)
The module that makes an API call, processes the response and returns a single
value

[**admin**:](https://github.com/api3dao/airnode/tree/v0.2/packages/airnode-admin)
A package/CLI tool to interact with the Airnode contracts across chains

[**airnode-abi**:](https://github.com/api3dao/airnode/tree/v0.2/packages/airnode-abi)
Encoding and decoding utilities for Airnode according to the
[Airnode ABI specifications](../specifications/airnode-abi-specifications.md)

[**deployer**:](https://github.com/api3dao/airnode/tree/v0.2/packages/airnode-deployer)
Tools to automate Airnode deployment

[**examples**:](https://github.com/api3dao/airnode/tree/v0.2/packages/airnode-examples)
A public list of examples showcasing the features of Airnode

[**node**:](https://github.com/api3dao/airnode/tree/v0.2/packages/airnode-node)
Airnode itself

[**ois**:](https://github.com/api3dao/airnode/tree/v0.2/packages/airnode-ois)
Types for [Oracle Integration Specification (OIS)](../specifications/ois.md)

[**operation**:](https://github.com/api3dao/airnode/tree/v0.2/packages/airnode-operation)
Development and testing utilities for the core parts of Airnode

[**protocol**:](https://github.com/api3dao/airnode/tree/v0.2/packages/airnode-protocol)
Contracts that implement Airnode RRP (request–response protocol)

[**validator**:](https://github.com/api3dao/airnode/tree/v0.2/packages/airnode-validator)
A package that can be used to validate and convert airnode specification files

Airnode packages are cross platform, available as npm packages or docker
containers. You should also be able to clone, build and use the packages on any
platform. However there is no guarantee that the development only features (e.g.
test or examples) will work out of the box.

It is recommend to use UNIX based systems for development. If you are using
Windows, consider [WSL2](https://docs.microsoft.com/en-us/windows/wsl/install).
